# SpiritStream

./: .dockerignore  .env.example  .envrc  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTORS.md  DEEPWIKI.md  DEPENDENCIES.md  GOVERNANCE.md  LICENSE  MILESTONES.latest.md  MILESTONES.main.md  MILESTONES_CEREMONY.md  README.md  REVIEWERS.md  THEMES.md  eslint.config.js  index.html  obs-services-table.md  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  setup.ps1  setup.sh  stories.md  tailwind.config.js  tmp_de_same.txt  tmp_es_same.txt  tmp_fr_same.txt  tmp_ja_same.txt  tsconfig.frontend.json  tsconfig.json  tsconfig.tsbuildinfo  turbo.json  vite.config.js  vite.config.ts
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.claude/claudedocs/: WELCOME-BACK.md  adding-new-platforms.md  architecture-new.md  architecture.md  build-system.md  component-library.md  design-system.md  development-workflow.md  electron-ipc.md  encryption-argon2id-strengthening.md  encryption-key-rotation-phase1-complete.md  encryption-key-rotation-plan.md  encryption-platform-protection.md  encryption-zeroization.md  ffmpeg-integration.md  frontend.md  index.md  migration-status.md  models.md  pages-and-views.md  passthrough-architecture.md  roadmap.md  security-review-2026-01-06.md  security.md  services.md  streaming-platforms-example.json  streaming-platforms-schema.md  tauri-migration.md  ui-specification.md  unified-chat-feasibility-study.md  web-app-split-master-plan.md
.claude/commands/: add-ipc-handler.md  add-model.md  analyze.md  build.md  check-types.md  dev.md  review-security.md  secure-access-control.md  secure-api.md  secure-auth.md  secure-file-upload.md  secure-input-output.md  secure-secrets.md  secure-server.md  troubleshoot.md
.claude/rules/: coding-standards.md  electron-patterns.md  ffmpeg-patterns.md  git-workflow.md  rust-patterns.md  tauri-patterns.md
.github/workflows/: ci.yml  publish-package.yml  release.yml
.opencode/command/: commit.md
apps/desktop/: package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  installer-hooks.nsh  loading.html  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/linux/: spiritstream.desktop
apps/desktop/src-tauri/src/: main.rs  permissions.rs
apps/web/: eslint.config.js  index.html  package.json  vite.config.ts
config/: encoders.conf
data/: settings.json  streaming-platforms.json
data/themes/: catppuccin-mocha-dark.jsonc  catppuccin-mocha-light.jsonc  nord-dark.jsonc  nord-light.jsonc  rainbow-pride-dark.jsonc  spirit-dark.jsonc  spirit-light.jsonc  trans-pride-light.jsonc
docker/: .dockerignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
docs/: GLOSSARY.md  README.md  stories.md
docs/01-architecture/: 01-system-overview.md  02-component-architecture.md  03-data-flow.md  04-security-architecture.md  README.md
docs/02-backend/: 01-rust-overview.md  02-services-layer.md  03-models-reference.md  04-tauri-commands.md  05-encryption-implementation.md  06-platform-registry.md  README.md
docs/03-frontend/: 01-react-architecture.md  02-notification-system.md  02-state-management.md  03-component-library.md  03-obs-websocket-connection.md  (+3 more)
frontend/: .gitignore  index.html  package-lock.json  vite.config.ts
scripts/: build-go2rtc.ts  build-server.ts  capture-app.mjs  clean.js  copyResources.js  dev-desktop.ts  ensure-dev-clean.ts  generate-platforms.ts  kill-server.sh  patch-for-distribution.cjs  patch-for-distribution.sh  split-themes.mjs  test-themes-final.mjs  test-themes-manual.mjs  test-themes.mjs
server/: Cargo.toml  build.rs
server/.cargo/: config.toml
server/src/: lib.rs  main.rs
server/src/commands/: mod.rs  system.rs
server/src/models/: chat.rs  encoders.rs  mod.rs  output_group.rs  profile.rs  profile_settings.rs  scene.rs  settings.rs  source.rs  stream_stats.rs  stream_target.rs  theme.rs
server/src/services/: audio_capture.rs  audio_level_extractor.rs  audio_levels.rs  camera_capture.rs  capture_frame.rs  capture_indicator.rs  chat_manager.rs  compositor.rs  device_discovery.rs  discord_webhook.rs  embedded_themes.rs  encoder_capabilities.rs  encryption.rs  events.rs  ffmpeg_downloader.rs  ffmpeg_handler.rs  ffmpeg_libs_pipeline.rs  go2rtc_client.rs  go2rtc_manager.rs  go2rtc_service.rs  h264_capture.rs  mod.rs  native_preview.rs  oauth.rs  obs_websocket.rs  path_validator.rs  permissions.rs  platform_registry.rs  preview_handler.rs  profile_manager.rs  recording_service.rs  replay_buffer.rs  sck_audio_capture.rs  screen_capture.rs  settings_manager.rs  source_lifecycle.rs  theme_manager.rs  thread_config.rs
server/src/services/chat/: mod.rs  platform.rs  stripchat.rs  tiktok.rs  trovo.rs  twitch.rs  youtube.rs
src-frontend/: App.tsx  env.d.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: launcher.rs  lib.rs  main.rs
src-tauri/src/commands/: chat.rs  ffmpeg.rs  mod.rs  profile.rs  settings.rs  stream.rs  system.rs  theme.rs
src-tauri/src/models/: mod.rs  output_group.rs  profile.rs  settings.rs  stream_stats.rs  stream_target.rs  theme.rs
src-tauri/src/services/: chat_manager.rs  encryption.rs  events.rs  ffmpeg_downloader.rs  ffmpeg_handler.rs  log_manager.rs  mod.rs  platform_registry.rs  profile_manager.rs  settings_manager.rs  theme_manager.rs
src-tauri/src/services/chat/: mod.rs
themes/: README.md  catppuccin-mocha-dark.jsonc  catppuccin-mocha-light.jsonc  catppuccin-mocha.jsonc.deprecated  dracula-dark.jsonc  dracula-light.jsonc  dracula.jsonc  kalifornia.jsonc  lundookie.jsonc  nord-dark.jsonc  nord-light.jsonc  nord.jsonc.deprecated  rainbow-pride-dark.jsonc  rainbow-pride-light.jsonc  rainbow-pride.jsonc.deprecated  spirit-dark.jsonc  spirit-light.jsonc  spirit.jsonc  spirit.jsonc.deprecated  theme-template.jsonc  trans-pride-dark.jsonc  trans-pride-light.jsonc  trans-pride.jsonc.deprecated
(+363 files in other folders)
