[package]
name = "spiritstream"
version = "1.0.0"
description = "SpiritStream - Multi-Destination Streaming Application"
authors = ["SpiritStream Contributors"]
license = "ISC"
repository = "https://github.com/ScopeCreep-zip/SpiritStream"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "spiritstream_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1.0"

[dependencies]
# Tauri
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.0", features = ["full"] }

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
zeroize = { version = "1.7", features = ["derive"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
notify = "6"

# FFmpeg Download
reqwest = { version = "0.11", features = ["stream", "json"] }
zip = "0.6"
tar = "0.4"
xz2 = "0.1"
flate2 = "1.0"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
tempfile = "3.10"

# Platform-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winnt"] }
