[package]
name = "spiritstream-desktop"
version = "1.1.1"
description = "SpiritStream Desktop - Multi-Destination Streaming Application"
authors = ["SpiritStream Contributors"]
license = "ISC"
repository = "https://github.com/ScopeCreep-zip/SpiritStream"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.0", features = ["process", "time", "rt-multi-thread"] }

# HTTP client (for health checks)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Utilities
log = "0.4"
tauri-plugin-http = "2"

# Native Capture
crabcamera = "0.4"
cpal = { version = "0.17", features = ["jack"] }
scap = "0.0.8"

# macOS Permissions (using native APIs via crabcamera and scap)
[target.'cfg(target_os = "macos")'.dependencies]
# crabcamera handles camera permissions, scap handles screen recording

# Linux Permissions (xdg-desktop-portal via ashpd)
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.9", features = ["tokio"] }

# Windows Permissions (WinRT MediaCapture API)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Media_Capture",
    "Security_Authorization_AppCapabilityAccess",
    "Foundation",
    "Foundation_Collections"
] }
