[package]
name = "spiritstream-desktop"
version = "1.2.1"
description = "SpiritStream Desktop - Multi-Destination Streaming Application"
authors = ["SpiritStream Contributors"]
license = "ISC"
repository = "https://github.com/ScopeCreep-zip/SpiritStream"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.0", features = ["process", "time", "rt-multi-thread"] }

# HTTP client (for health checks)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Utilities
log = "0.4"
tauri-plugin-http = "2"
dirs-next = "2.0"
chrono = "0.4"
